RESOLVED FIXED275570
REGRESSION(279854@main): [GStreamer][WebRTC] webrtc/video-stats.html is crashing
https://bugs.webkit.org/show_bug.cgi?id=275570
Summary REGRESSION(279854@main): [GStreamer][WebRTC] webrtc/video-stats.html is crashing
Carlos Bentzen
Reported 2024-06-17 09:47:13 PDT
With 279854@main, the default constructors are removed if USE(LIBWEBRTC). However, without USE(LIBWEBRTC) we still have the implicit constructor declared. But now the classes don't set the type field anymore in the default constructor, which is left uninitialized and causes the following crash in webrtc/video-stats.html: Thread 1 (Thread 0x7f730421cbc0 (LWP 648234)): #0 0x00007f730fe5766d in WebCore::convertEnumerationToString(WebCore::RTCStatsReport::Type) () at /host/home/cadubentzen/Projects/UpstreamWebKit/WebKit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #1 0x00007f730fe57e26 in JSC::JSString* WebCore::convertEnumerationToJS<WebCore::RTCStatsReport::Type>(JSC::VM&, WebCore::RTCStatsReport::Type) () at /host/home/cadubentzen/Projects/UpstreamWebKit/WebKit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #2 0x00007f730fe5e5d2 in WebCore::convertDictionaryToJS(JSC::JSGlobalObject&, WebCore::JSDOMGlobalObject&, WebCore::RTCStatsReport::PeerConnectionStats const&) () at /host/home/cadubentzen/Projects/UpstreamWebKit/WebKit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #3 0x00007f73104aced8 in WebCore::fillReportCallback(unsigned int, _GValue const*, void*) [clone .part.0] () at /host/home/cadubentzen/Projects/UpstreamWebKit/WebKit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #4 0x00007f73104af644 in WebCore::fillReportCallback(unsigned int, _GValue const*, void*) () at /host/home/cadubentzen/Projects/UpstreamWebKit/WebKit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #5 0x00007f730a9e1063 in gst_structure_foreach (structure=0x7f707c13ce10, func=0x7f73104af610 <WebCore::fillReportCallback(unsigned int, _GValue const*, void*)>, user_data=0x7f72fa2bdae0) at ../subprojects/gstreamer/gst/gststructure.c:1364 #6 0x00007f73104ac384 in WTF::Detail::CallableWrapper<WebCore::GStreamerStatsCollector::getStats(WTF::CompletionHandler<void (WTF::RefPtr<WebCore::RTCStatsReport, WTF::RawPtrTraits<WebCore::RTCStatsReport>, WTF::DefaultRefDerefTraits<WebCore::RTCStatsReport> >&&)>&&, _GstPad*, _GstStructure const*)::{lambda(_GstPromise*, void*)#1}::operator()(_GstPromise*, void*) const::{lambda()#1}::operator()() const::{lambda(auto:1&)#1}, void, WebCore::DOMMapAdapter&>::call(WebCore::DOMMapAdapter&) () at /host/home/cadubentzen/Projects/UpstreamWebKit/WebKit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #7 0x00007f730fe52647 in WebCore::jsRTCStatsReportPrototypeFunction_entries(JSC::JSGlobalObject*, JSC::CallFrame*) () at /host/home/cadubentzen/Projects/UpstreamWebKit/WebKit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 I'm working on fixing this.
Attachments
Carlos Bentzen
Comment 1 2024-06-17 23:48:36 PDT
EWS
Comment 2 2024-06-18 12:37:37 PDT
Committed 280132@main (150ac45afe34): <https://commits.webkit.org/280132@main> Reviewed commits have been landed. Closing PR #29925 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-06-18 12:38:14 PDT
Note You need to log in before you can comment on or make changes to this bug.