REGRESSION(279854@main): [GStreamer][WebRTC] webrtc/video-stats.html is crashing https://bugs.webkit.org/show_bug.cgi?id=275570

Reviewed by Philippe Normand.

With 279854@main, the default constructors for Stats structs were
removed if USE(LIBWEBRTC). However, without USE(LIBWEBRTC) we still have
the implicit default constructors declared, which don't set the type
field as before, so it is left uninitialized and causes a crash in
webrtc/video-stats.html.

Fix the issue by implementing the counterpart to 279854@main in
GStreamerStatsCollector.cpp and add corresponding constructors in
RTCStatsReport classes. Additionally, add static_assert's to ensure
there are no default constructors at compile time.

* Source/WebCore/Modules/mediastream/RTCStatsReport.h:
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerStatsCollector.cpp:
(WebCore::RTCStatsReport::Stats::Stats):
(WebCore::RTCStatsReport::RtpStreamStats::RtpStreamStats):
(WebCore::RTCStatsReport::SentRtpStreamStats::SentRtpStreamStats):
(WebCore::RTCStatsReport::CodecStats::CodecStats):
(WebCore::RTCStatsReport::ReceivedRtpStreamStats::ReceivedRtpStreamStats):
(WebCore::RTCStatsReport::RemoteInboundRtpStreamStats::RemoteInboundRtpStreamStats):
(WebCore::RTCStatsReport::RemoteOutboundRtpStreamStats::RemoteOutboundRtpStreamStats):
(WebCore::RTCStatsReport::InboundRtpStreamStats::InboundRtpStreamStats):
(WebCore::RTCStatsReport::OutboundRtpStreamStats::OutboundRtpStreamStats):
(WebCore::RTCStatsReport::PeerConnectionStats::PeerConnectionStats):
(WebCore::RTCStatsReport::TransportStats::TransportStats):
(WebCore::RTCStatsReport::IceCandidateStats::IceCandidateStats):
(WebCore::RTCStatsReport::IceCandidatePairStats::IceCandidatePairStats):
(WebCore::fillReportCallback):
(WebCore::fillRTCStats): Deleted.
(WebCore::fillRTCRTPStreamStats): Deleted.
(WebCore::fillSentRTPStreamStats): Deleted.
(WebCore::fillRTCCodecStats): Deleted.
(WebCore::fillReceivedRTPStreamStats): Deleted.
(WebCore::fillRemoteInboundRTPStreamStats): Deleted.
(WebCore::fillRemoteOutboundRTPStreamStats): Deleted.
(WebCore::fillInboundRTPStreamStats): Deleted.
(WebCore::fillOutboundRTPStreamStats): Deleted.
(WebCore::fillRTCPeerConnectionStats): Deleted.
(WebCore::fillRTCTransportStats): Deleted.
(WebCore::fillRTCCandidateStats): Deleted.
(WebCore::fillRTCCandidatePairStats): Deleted.

Canonical link: https://commits.webkit.org/280132@main