Source/WebCore/Modules/mediastream/RTCStatsReport.h
@@ -32,6 +32,14 @@
 #include "RTCIceTcpCandidateType.h"
 #include "RTCIceTransportState.h"
 #include <wtf/KeyValuePair.h>
+#include <wtf/RefCounted.h>
+#include <wtf/text/WTFString.h>
+
+#if USE(GSTREAMER_WEBRTC)
+#define GST_USE_UNSTABLE_API
+#include <gst/webrtc/webrtc.h>
+#undef GST_USE_UNSTABLE_API
+#endif
 
 #if USE(LIBWEBRTC)
 namespace webrtc {
@@ -86,19 +94,25 @@ public:
         RemoteCandidate,
         Certificate,
     };
+
     struct Stats {
 #if USE(LIBWEBRTC)
         Stats(Type, const webrtc::RTCStats&);
+#elif USE(GSTREAMER_WEBRTC)
+        Stats(Type, const GstStructure*);
 #endif
 
         double timestamp { 0 };
         Type type;
         String id;
     };
+    static_assert(!std::is_default_constructible_v<Stats>);
 
     struct RtpStreamStats : Stats {
 #if USE(LIBWEBRTC)
         RtpStreamStats(Type, const webrtc::RTCRtpStreamStats&);
+#elif USE(GSTREAMER_WEBRTC)
+        RtpStreamStats(Type, const GstStructure*);
 #endif
 
         uint32_t ssrc { 0 };
@@ -106,20 +120,26 @@ public:
         String transportId;
         String codecId;
     };
+    static_assert(!std::is_default_constructible_v<RtpStreamStats>);
 
     struct ReceivedRtpStreamStats : RtpStreamStats {
 #if USE(LIBWEBRTC)
         ReceivedRtpStreamStats(Type, const webrtc::RTCReceivedRtpStreamStats&);
+#elif USE(GSTREAMER_WEBRTC)
+        ReceivedRtpStreamStats(Type, const GstStructure*);
 #endif
 
         std::optional<uint64_t> packetsReceived;
         std::optional<int64_t> packetsLost;
         std::optional<double> jitter;
     };
+    static_assert(!std::is_default_constructible_v<ReceivedRtpStreamStats>);
 
     struct InboundRtpStreamStats : ReceivedRtpStreamStats {
 #if USE(LIBWEBRTC)
         InboundRtpStreamStats(const webrtc::RTCInboundRtpStreamStats&);
+#elif USE(GSTREAMER_WEBRTC)
+        InboundRtpStreamStats(const GstStructure*, const GstStructure* additionalStats);
 #endif
 
         String trackIdentifier;
@@ -180,10 +200,13 @@ public:
         std::optional<uint32_t> rtxSsrc;
         std::optional<uint32_t> fecSsrc;
     };
+    static_assert(!std::is_default_constructible_v<InboundRtpStreamStats>);
 
     struct RemoteInboundRtpStreamStats : ReceivedRtpStreamStats {
 #if USE(LIBWEBRTC)
         RemoteInboundRtpStreamStats(const webrtc::RTCRemoteInboundRtpStreamStats&);
+#elif USE(GSTREAMER_WEBRTC)
+        RemoteInboundRtpStreamStats(const GstStructure*);
 #endif
 
         String localId;
@@ -192,15 +215,19 @@ public:
         std::optional<double> fractionLost;
         std::optional<uint64_t> roundTripTimeMeasurements;
     };
+    static_assert(!std::is_default_constructible_v<RemoteInboundRtpStreamStats>);
 
     struct SentRtpStreamStats : RtpStreamStats {
 #if USE(LIBWEBRTC)
         SentRtpStreamStats(Type, const webrtc::RTCSentRtpStreamStats&);
+#elif USE(GSTREAMER_WEBRTC)
+        SentRtpStreamStats(Type, const GstStructure*);
 #endif
 
         std::optional<uint32_t> packetsSent;
         std::optional<uint64_t> bytesSent;
     };
+    static_assert(!std::is_default_constructible_v<SentRtpStreamStats>);
 
     enum class QualityLimitationReason {
         None,
@@ -212,6 +239,8 @@ public:
     struct OutboundRtpStreamStats : SentRtpStreamStats {
 #if USE(LIBWEBRTC)
         OutboundRtpStreamStats(const webrtc::RTCOutboundRtpStreamStats&);
+#elif USE(GSTREAMER_WEBRTC)
+        OutboundRtpStreamStats(const GstStructure*, const GstStructure* additionalStats);
 #endif
 
         String mid;
@@ -243,10 +272,13 @@ public:
         std::optional<bool> active;
         String scalabilityMode;
     };
+    static_assert(!std::is_default_constructible_v<OutboundRtpStreamStats>);
 
     struct RemoteOutboundRtpStreamStats : SentRtpStreamStats {
 #if USE(LIBWEBRTC)
         RemoteOutboundRtpStreamStats(const webrtc::RTCRemoteOutboundRtpStreamStats&);
+#elif USE(GSTREAMER_WEBRTC)
+        RemoteOutboundRtpStreamStats(const GstStructure*);
 #endif
 
         String localId;
@@ -256,10 +288,13 @@ public:
         std::optional<double> totalRoundTripTime;
         std::optional<uint64_t> roundTripTimeMeasurements;
     };
+    static_assert(!std::is_default_constructible_v<RemoteOutboundRtpStreamStats>);
 
     struct DataChannelStats : Stats {
 #if USE(LIBWEBRTC)
         DataChannelStats(const webrtc::RTCDataChannelStats&);
+#elif USE(GSTREAMER_WEBRTC)
+        DataChannelStats(const GstStructure*);
 #endif
 
         String label;
@@ -271,6 +306,7 @@ public:
         std::optional<uint32_t> messagesReceived;
         std::optional<uint64_t> bytesReceived;
     };
+    static_assert(!std::is_default_constructible_v<DataChannelStats>);
 
     enum class IceCandidatePairState {
         Frozen,
@@ -283,6 +319,8 @@ public:
     struct IceCandidatePairStats : Stats {
 #if USE(LIBWEBRTC)
         IceCandidatePairStats(const webrtc::RTCIceCandidatePairStats&);
+#elif USE(GSTREAMER_WEBRTC)
+        IceCandidatePairStats(const GstStructure*);
 #endif
 
         String transportId;
@@ -308,10 +346,13 @@ public:
         std::optional<uint32_t> packetsDiscardedOnSend;
         std::optional<uint64_t> bytesDiscardedOnSend;
     };
+    static_assert(!std::is_default_constructible_v<IceCandidatePairStats>);
 
     struct IceCandidateStats : Stats {
 #if USE(LIBWEBRTC)
         IceCandidateStats(const webrtc::RTCIceCandidateStats&);
+#elif USE(GSTREAMER_WEBRTC)
+        IceCandidateStats(GstWebRTCStatsType, const GstStructure*);
 #endif
 
         String transportId;
@@ -328,10 +369,13 @@ public:
         String usernameFragment;
         std::optional<RTCIceTcpCandidateType> tcpType;
     };
+    static_assert(!std::is_default_constructible_v<IceCandidateStats>);
 
     struct CertificateStats : Stats {
 #if USE(LIBWEBRTC)
         CertificateStats(const webrtc::RTCCertificateStats&);
+#elif USE(GSTREAMER_WEBRTC)
+        CertificateStats(const GstStructure*);
 #endif
 
         String fingerprint;
@@ -339,6 +383,7 @@ public:
         String base64Certificate;
         String issuerCertificateId;
     };
+    static_assert(!std::is_default_constructible_v<CertificateStats>);
 
     enum class CodecType {
         Encode,
@@ -348,6 +393,8 @@ public:
     struct CodecStats : Stats {
 #if USE(LIBWEBRTC)
         CodecStats(const webrtc::RTCCodecStats&);
+#elif USE(GSTREAMER_WEBRTC)
+        CodecStats(const GstStructure*);
 #endif
 
         std::optional<uint32_t> payloadType;
@@ -358,6 +405,7 @@ public:
         String sdpFmtpLine;
         String implementation;
     };
+    static_assert(!std::is_default_constructible_v<CodecStats>);
 
     enum DtlsRole {
         Client,
@@ -368,6 +416,8 @@ public:
     struct TransportStats : Stats {
 #if USE(LIBWEBRTC)
         TransportStats(const webrtc::RTCTransportStats&);
+#elif USE(GSTREAMER_WEBRTC)
+        TransportStats(const GstStructure*);
 #endif
 
         std::optional<uint64_t> packetsSent;
@@ -387,10 +437,13 @@ public:
         String srtpCipher;
         std::optional<uint32_t> selectedCandidatePairChanges;
     };
+    static_assert(!std::is_default_constructible_v<TransportStats>);
 
     struct AudioPlayoutStats : Stats {
 #if USE(LIBWEBRTC)
         AudioPlayoutStats(const webrtc::RTCAudioPlayoutStats&);
+#elif USE(GSTREAMER_WEBRTC)
+        AudioPlayoutStats(const GstStructure*);
 #endif
 
         String kind;
@@ -400,29 +453,38 @@ public:
         std::optional<double> totalPlayoutDelay;
         std::optional<uint64_t> totalSamplesCount;
     };
+    static_assert(!std::is_default_constructible_v<AudioPlayoutStats>);
 
     struct PeerConnectionStats : Stats {
 #if USE(LIBWEBRTC)
         PeerConnectionStats(const webrtc::RTCPeerConnectionStats&);
+#elif USE(GSTREAMER_WEBRTC)
+        PeerConnectionStats(const GstStructure*);
 #endif
 
         std::optional<uint32_t> dataChannelsOpened;
         std::optional<uint32_t> dataChannelsClosed;
     };
+    static_assert(!std::is_default_constructible_v<PeerConnectionStats>);
 
     struct MediaSourceStats : Stats {
 #if USE(LIBWEBRTC)
         MediaSourceStats(Type, const webrtc::RTCMediaSourceStats&);
+#elif USE(GSTREAMER_WEBRTC)
+        MediaSourceStats(Type, const GstStructure*);
 #endif
 
         String trackIdentifier;
         String kind;
         std::optional<bool> relayedSource;
     };
+    static_assert(!std::is_default_constructible_v<MediaSourceStats>);
 
     struct AudioSourceStats : MediaSourceStats {
 #if USE(LIBWEBRTC)
         AudioSourceStats(const webrtc::RTCAudioSourceStats&);
+#elif USE(GSTREAMER_WEBRTC)
+        AudioSourceStats(const GstStructure*);
 #endif
 
         std::optional<double> audioLevel;
@@ -435,10 +497,13 @@ public:
         std::optional<double> totalCaptureDelay;
         std::optional<uint64_t> totalSamplesCaptured;
     };
+    static_assert(!std::is_default_constructible_v<AudioSourceStats>);
 
     struct VideoSourceStats : MediaSourceStats {
 #if USE(LIBWEBRTC)
         VideoSourceStats(const webrtc::RTCVideoSourceStats&);
+#elif USE(GSTREAMER_WEBRTC)
+        VideoSourceStats(const GstStructure*);
 #endif
 
         std::optional<unsigned long> width;
@@ -446,6 +511,7 @@ public:
         std::optional<unsigned long> frames;
         std::optional<double> framesPerSecond;
     };
+    static_assert(!std::is_default_constructible_v<VideoSourceStats>);
 
 private:
     explicit RTCStatsReport(MapInitializer&&);
